include(CopyBuildProducts)
include(CopyRuntimeDependencies)
add_subdirectory(Experimental)
add_subdirectory(EcsPipeline)
add_subdirectory(InputEcsSample)
add_subdirectory(PersistenceSample)
add_subdirectory(UIEventExample)
add_subdirectory(FabulistTest)
add_subdirectory(AudioEcsSample)

add_custom_target(Samples
  DEPENDS
    VulkanRender
    EcsPipeline
    InputEcsSample
    PersistenceSample
    UIEventExample
    FabulistTest
    AudioEcsSample
)
