add_subdirectory(NovelRT/Core)
add_subdirectory(NovelRT/Audio)
add_subdirectory(NovelRT/Graphics)
add_subdirectory(NovelRT/Graphics/Vulkan)
add_subdirectory(NovelRT/Ecs)
add_subdirectory(NovelRT/Ecs/Audio)
add_subdirectory(NovelRT/Ecs/Graphics)
# add_subdirectory(NovelRT)
# if (NOVELRT_BUILD_INTEROP)
#  message(STATUS "Building NovelRT with Interop Support")
#  add_subdirectory(NovelRT.Interop)
# endif()
